@@ -1,3 +1,8 @@
+2008-06-04  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	  Don't warn about overriden docs comment if its the same text.
+
 2008-06-03  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
